--- a/apaek1.html
+++ b/apaek1.html
@@ -2,19 +2,14 @@
 <head>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 <script type="text/javascript" src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-<link rel="stylesheet" href="testing1.css" type="text/css" />
+<link rel="stylesheet" href="apaek1.css" type="text/css" />
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="testing1.js"> </script>
-<script type="text/javascript" src="dist/shp.js"> </script>
+<script src="apaek1.js"></script>
 </head>
 
 <body>
 <div id="map"> 
-<script src="dist/shp.min.js"> </script>
-<script>shp("http://localhost:8000/Communities.zip").then(function(data){
-	geo.addData(data);
-});
-</script>
+<script>init()</script>
 </div>
 </body>
 
